# strauss

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  LICENSE  README.md  deploy.sh  easyagent.service  history.md  pyproject.toml
backend/: agent.py  app.py  budget.py  config.py  kb_loader.py  logging_config.py  profiles.py  tools.py  web_search.py
backend/providers/: anthropic_provider.py  base.py  gemini_provider.py  openai_compat_provider.py  tool_translator.py
docs/: agent_best_practices.md
kb/: README.md
profiles-advanced/: README.md
profiles/customer-service/: TEMPLATE.md  profile.json  system.md
profiles/customer-service/kb/: faq.md  hours.md  policies.md  pricing.md  services.md
profiles/research-analyst/: profile.json  system.md
profiles/research-analyst/evals/: smoke.json
profiles/sales-concierge/: profile.json  system.md
profiles/sales-concierge/data/: catalog.json
profiles/sales-concierge/evals/: smoke.json
profiles/strauss/: profile.json  system.md
tests/: conftest.py  test_agent_loop.py  test_app.py  test_customer_service_profile.py  test_profiles_and_translators.py  test_providers.py  test_tools.py
tests/fixtures/mini_kb/: INDEX.md
tests/fixtures/mini_kb/codebases/: widget.xml
tests/fixtures/mini_kb/meta/: faq.md
tests/fixtures/mini_kb/projects/: widget.md
tests/fixtures/mini_kb/resume/: resume.md
web/: app.js  index.html  styles.css
web/lib/: markdown.js
